[project]
name = "star-chart"
version = "0.1.0"
description = "A simple set of CLI tools designed to automatically download, parse and plot astronomical observation data for star chart authoring."
authors = [{name = "João Victor Teófilo Salgado", email = "jvictorteo2000@hotmail.com"}]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "astroquery>=0.4.11",
    "duckdb>=1.5.2",
    "geopandas>=1.1.3",
    "skyfield>=1.54",
    "typer>=0.25.1",
]

[project.scripts]
star-chart = "star_chart.cli:app"

[tool.uv]
package = true

[tool.setuptools]
packages = ["star_chart"]
